<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMoviesDetails"
    android:background="@color/bg_details_screen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/gradient_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@id/main_image"
            app:layout_constraintEnd_toEndOf="@id/main_image"
            app:layout_constraintStart_toStartOf="@id/main_image"
            app:layout_constraintTop_toTopOf="@id/main_image" />

        <TextView
            android:id="@+id/txv_back"
            style="@style/TextViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp56"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/back"
            app:drawableStartCompat="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txv_year"
            style="@style/TextViewYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/_13"
            app:layout_constraintBottom_toTopOf="@id/txv_title"
            app:layout_constraintStart_toStartOf="@id/guideline_start" />

        <TextView
            android:id="@+id/txv_title"
            style="@style/TextViewName"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/avengers_nend_game"
            app:layout_constraintBottom_toBottomOf="@id/main_image"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/main_image" />

        <TextView
            android:id="@+id/txv_tagline"
            style="@style/TextViewTagline"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:gravity="center_vertical"
            android:text="@string/action_adventure_fantasy"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/txv_title" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:backgroundTint="@color/pink"
            android:isIndicator="true"
            android:max="5"
            android:numStars="5"
            android:progressBackgroundTint="@color/gray"
            android:progressTint="@color/pink"
            android:rating="4.0"
            android:secondaryProgressTint="#00000000"
            android:stepSize="0.1"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/txv_tagline" />

        <TextView
            android:id="@+id/txv_reviews"
            style="@style/TextViewReviews"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp8"
            android:text="@string/_125_reviews"
            app:layout_constraintBottom_toBottomOf="@id/rating_bar"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/rating_bar"
            app:layout_constraintTop_toTopOf="@id/rating_bar" />

        <TextView
            android:id="@+id/txv_storyline"
            style="@style/TextViewStoryline"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:gravity="center_vertical"
            android:text="@string/storyline"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/txv_reviews" />

        <TextView
            android:id="@+id/txv_about"
            style="@style/TextViewAbout"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/sp4"
            android:text="@string/text"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/txv_storyline" />

        <TextView
            android:id="@+id/txv_cast"
            style="@style/TextViewCast"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:gravity="center_vertical"
            android:text="@string/cast"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/txv_about" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imv_downey"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            android:layout_marginTop="@dimen/dp8"
            android:src="@drawable/downey"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/imv_evans"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/txv_cast"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.ShapeImage" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imv_evans"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            android:layout_marginStart="@dimen/dp8"
            android:src="@drawable/evans"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/imv_ruffalo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imv_downey"
            app:layout_constraintTop_toTopOf="@id/imv_downey"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.ShapeImage" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imv_ruffalo"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            android:layout_marginStart="@dimen/dp8"
            android:src="@drawable/ruffalo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/imv_hemsworth"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imv_evans"
            app:layout_constraintTop_toTopOf="@id/imv_evans"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.ShapeImage" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imv_hemsworth"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            android:layout_marginStart="@dimen/dp8"
            android:src="@drawable/hemsworth"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imv_ruffalo"
            app:layout_constraintTop_toTopOf="@id/imv_ruffalo"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.ShapeImage" />

        <TextView
            android:id="@+id/txv_downey"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp6"
            android:gravity="center_vertical"
            android:text="@string/robert_downey_jr"
            android:textAppearance="@style/TextViewNames"
            app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/imv_downey"
            app:layout_constraintStart_toStartOf="@id/imv_downey"
            app:layout_constraintTop_toBottomOf="@id/imv_downey"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txv_evans"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp6"
            android:gravity="center_vertical"
            android:text="@string/chris_evans"
            android:textAppearance="@style/TextViewNames"
            app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/imv_evans"
            app:layout_constraintStart_toStartOf="@id/imv_evans"
            app:layout_constraintTop_toBottomOf="@id/imv_evans"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txv_ruffalo"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp6"
            android:gravity="center_vertical"
            android:text="@string/mark_ruffalo"
            android:textAppearance="@style/TextViewNames"
            app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/imv_ruffalo"
            app:layout_constraintStart_toStartOf="@id/imv_ruffalo"
            app:layout_constraintTop_toBottomOf="@id/imv_ruffalo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txv_hemsworth"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp6"
            android:gravity="center_vertical"
            android:text="@string/chris_hemsworth"
            android:textAppearance="@style/TextViewNames"
            app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/imv_hemsworth"
            app:layout_constraintStart_toStartOf="@id/imv_hemsworth"
            app:layout_constraintTop_toBottomOf="@id/imv_hemsworth"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/dp32" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>