<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_details_screen"
    tools:context=".FragmentMoviesList">

    <TextView
        android:id="@+id/txv_movies_list"
        style="@style/TextViewMoviesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp56"
        android:drawablePadding="@dimen/dp8"
        android:padding="@dimen/dp10"
        android:text="@string/movies_list"
        app:drawableStartCompat="@drawable/ic_aim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp18"
        app:cardCornerRadius="@dimen/dp8"
        app:strokeColor="#636375"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txv_movies_list">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_details_screen">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start_inner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp6" />

            <TextView
                android:id="@+id/txv_minute"
                style="@style/TextViewMinute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp2"
                android:layout_marginBottom="@dimen/dp8"
                android:text="@string/_137_min"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_start_inner"
                app:layout_constraintTop_toBottomOf="@+id/txv_name" />

            <TextView
                android:id="@+id/txv_name"
                style="@style/TextViewNameList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp2"
                android:layout_marginTop="@dimen/dp8"
                android:layout_marginEnd="@dimen/dp8"
                android:text="@string/avengers_end_game"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_start_inner"
                app:layout_constraintTop_toBottomOf="@+id/imv_main" />

            <ImageView
                android:id="@+id/imv_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp0"
                android:background="@drawable/gradient"
                app:layout_constraintBottom_toBottomOf="@id/imv_main"
                app:layout_constraintEnd_toEndOf="@id/imv_main"
                app:layout_constraintStart_toStartOf="@id/imv_main"
                app:layout_constraintTop_toTopOf="@id/imv_main" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="@dimen/dp24"
                android:layout_height="@dimen/dp24"
                android:layout_marginTop="@dimen/dp8"
                app:cardCornerRadius="5dp"
                app:layout_constraintStart_toStartOf="@id/guideline_start_inner"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txv_13"
                    style="@style/TextView13plus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:gravity="center"
                    android:text="@string/_13" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp8"
                android:src="@drawable/ic_like"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cardView" />

            <TextView
                android:id="@+id/txv_tagline"
                style="@style/TextViewTaglineList"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp4"
                android:text="@string/action_adventure_fantasy"
                app:layout_constraintBottom_toTopOf="@id/rating_bar"
                app:layout_constraintStart_toStartOf="@id/guideline_start_inner" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/pink"
                android:isIndicator="true"
                android:max="5"
                android:numStars="5"
                android:progressBackgroundTint="@color/gray"
                android:progressTint="@color/pink"
                android:rating="4.0"
                android:secondaryProgressTint="#00000000"
                android:stepSize="0.1"
                app:layout_constraintBottom_toBottomOf="@id/imv_main"
                app:layout_constraintStart_toStartOf="@id/guideline_start_inner" />

            <TextView
                android:id="@+id/txv_reviews"
                style="@style/TextViewReviewsList"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:text="@string/_125_reviews"
                app:layout_constraintBottom_toBottomOf="@id/rating_bar"
                app:layout_constraintStart_toEndOf="@id/rating_bar"
                app:layout_constraintTop_toTopOf="@id/rating_bar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>